unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/Service_Territory_Scheduling_Override__c.object-meta.xml
<CustomObject>
    <label>Service Territory Scheduling Override</label>
    <nameField>
        <label>Service Territory Scheduling Override Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Territory Scheduling Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>