unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Days_Applied__c.field-meta.xml
<CustomField>
    <fullName>Days_Applied__c</fullName>
    <inlineHelpText>Days which this override will be applied</inlineHelpText>
    <label>Days Applied</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_the_Week</valueSetName>
    </valueSet>
</CustomField>