unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/End_Hour__c.field-meta.xml
<CustomField>
    <fullName>End_Hour__c</fullName>
    <label>End Hour</label>
    <type>Time</type>
</CustomField>