unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Map_Polygon__c.field-meta.xml
<CustomField>
    <fullName>Map_Polygon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Map Polygon Lookup for Service Territory Override during call receive.</description>
    <label>Map Polygon</label>
    <referenceTo>FSL__Polygon__c</referenceTo>
    <relationshipLabel>Service Territory Scheduling Overrides</relationshipLabel>
    <relationshipName>Service_Territory_Scheduling_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>