unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Override_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Override_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The actual facility that will do the work</description>
    <label>Override Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Territory Scheduling Overrides (Override Service Territory)</relationshipLabel>
    <relationshipName>Service_Territory_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>