unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Service Territory Scheduling Overrides</relationshipLabel>
    <relationshipName>Service_Territory_Scheduling_Overrides</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>