unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Territory Scheduling Overrides</relationshipLabel>
    <relationshipName>Service_Territory_Scheduling_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>