unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Hour__c</fullName>
    <label>Start Hour</label>
    <type>Time</type>
</CustomField>