unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/fields/Work_Types__c.field-meta.xml
<CustomField>
    <fullName>Work_Types__c</fullName>
    <label>Work Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Type</valueSetName>
    </valueSet>
</CustomField>