unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/recordTypes/Scheduling_Override.recordType-meta.xml
<RecordType>
    <fullName>Scheduling_Override</fullName>
    <active>true</active>
    <label>Scheduling Override</label>
</RecordType>