unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/recordTypes/Territory_Override.recordType-meta.xml
<RecordType>
    <fullName>Territory_Override</fullName>
    <active>true</active>
    <description>Override Service Territory during call receive</description>
    <label>Territory Override</label>
</RecordType>