unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/validationRules/FSl_Start_Hour_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FSl_Start_Hour_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Start_Hour__c  &gt;=  End_Hour__c , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Start time should not be greater than or equal to End time.</errorMessage>
</ValidationRule>