unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Work_Types__c</columns>
    <columns>Override_Service_Territory__c</columns>
    <columns>Start_Hour__c</columns>
    <columns>End_Hour__c</columns>
    <columns>Days_Applied__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Override_Service_Territory__c</field>
        <operation>contains</operation>
        <value>Y3105</value>
    </filters>
    <label>All</label>
</ListView>