unpackaged/main/default/objects/Service_Territory_Scheduling_Override__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Map_Polygon__c</columns>
    <columns>Scheduling_Policy__c</columns>
    <columns>Override_Service_Territory__c</columns>
    <columns>Days_Applied__c</columns>
    <columns>Work_Types__c</columns>
    <columns>Start_Hour__c</columns>
    <columns>End_Hour__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Territory_Scheduling_Override__c.Territory_Override</value>
    </filters>
    <label>All</label>
</ListView>